src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>provides access to contact account Id in javascript buttons.</description>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Email_Address__c</fullName>
        <description>populated by bulk api loading process</description>
        <externalId>true</externalId>
        <label>Applicant Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Broad_area_s_of_interest__c</fullName>
        <description>Captures a student&apos;s study interests</description>
        <label>Broad area(s) of interest</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>Captures a student&apos;s campus location</description>
        <label>Campus</label>
        <picklist>
            <picklistValues>
                <fullName>Berwick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caulfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clayton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gippsland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peninsula</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CaseSafeAccountId__c</fullName>
        <description>used in external data manipulation activities</description>
        <formula>CASESAFEID( AccountId )</formula>
        <label>CaseSafeAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSafeContactId__c</fullName>
        <description>used in external data manipulation activities</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Profile__c</fullName>
        <description>Describes the type of the contact. Carried over from UniCRMv1.  Have suggested alternate means to manage contact profile in future. The [value] can be used during segmentation reporting on the concatenated string field of same name.</description>
        <label>Contact Profile</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Student (Dom) [FSD]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Student (Dom) - Mature Age [FSDM]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Student (Int) [FSI]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Staff/Teacher [SS]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Student (Dom) [CSD]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Student (Int) [CSI]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Student [PS]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Scholars [MS]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Extension [ME]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Staff [AS]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Staff [PFS]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Client [EC]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent Counsellor [AC]</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Profiles_Selected__c</fullName>
        <description>used to provide access to the multi-select contact profile field values in reporting, via &apos;contains&apos; filters.</description>
        <label>Contact Profiles Selected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Copado_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Copado External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_from_Enquiry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, at creation trigger will copy fields from case over to contact</description>
        <label>Copy from Enquiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence__c</fullName>
        <description>Captures a student&apos;s country of residence</description>
        <label>Country of Residence</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADELIE LAND (FRANCE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA, NFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINIAN ANTARCTIC TERRITORY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIAN ANTARCTIC TERRITORY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIAN EXTERNAL TERRITORIES, NEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>Captures the course code that a student is pursuing</description>
        <label>Course Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>Captures the name of the course that a student is pursuing</description>
        <label>Course Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Studying__c</fullName>
        <description>Captures what a secondary student is currently studying; does not reflect a Monash student&apos;s enrolments (as of June 2016 enrolments aren&apos;t being stored in UniCRM).</description>
        <inlineHelpText>Captures what a secondary student is currently studying; does not reflect a Monash student&apos;s enrolments (as of June 2016 enrolments aren&apos;t being stored in UniCRM).</inlineHelpText>
        <label>Currently Studying (Secondary School)</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_Studying_at__c</fullName>
        <description>Captures if the student is currently studying in Australia or overseas</description>
        <label>Currently Studying at</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_a_Secondary_School_Student__c</fullName>
        <description>Captures if a student is currently a secondary school student</description>
        <label>Currently a Secondary School Student</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this student is deceased</description>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dietary_Requirements__c</fullName>
        <description>Captures a student&apos;s dietary requirements/restrictions</description>
        <label>Dietary Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Halal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kosher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coeliac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nut allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_send_surveys__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures the student&apos;s preference to receive surveys</description>
        <label>Do not send surveys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Addresses__c</fullName>
        <description>used to store concatenated email addresses that this contact has had over time</description>
        <label>Email Addresses Used</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extension_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures if a student is an extension student</description>
        <label>Extension Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <description>Captures the faculty that the student belongs</description>
        <label>Faculty</label>
        <picklist>
            <picklistValues>
                <fullName>Art, Design and Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business and Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicine, Nursing and Health Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy and Pharmaceutical Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>custom first name field used on global action within service console.</description>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_case_corrected__c</fullName>
        <description>exists to provide a way to correct the case of contact names that are imported/maintained with Capital letters</description>
        <formula>IF(
NOT(ISBLANK( FirstName )),
UPPER(LEFT(FirstName ,1)) &amp; LOWER(RIGHT(FirstName, LEN(FirstName)-1)), &quot;&quot; )</formula>
        <label>First Name case corrected</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_in_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For MonTRACK, captures if the student is the first in his/her family to attend University.</description>
        <label>First in Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Captures a student&apos;s gender</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_level_of_education_to_date__c</fullName>
        <description>Captures a student&apos;s highest level of education</description>
        <label>Highest level of education to date</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Year 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAFE qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelors degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other program/diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postgraduate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kept for historical purposes for UniCRM 1.0 to 2.0 data migration.  Going forward, should use use Contact Profile to indicate a student is International.  **SHOULD NOT BE ON PAGE LAYOUTS**</description>
        <inlineHelpText>Kept for historical purposes for UniCRM 1.0 to 2.0 data migration.  Going forward, should use use Contact Profile to indicate a student is International.</inlineHelpText>
        <label>International Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Corporate_Contact_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <description>follows the formula field of same name, which in turn drives sharing rules for Contact records</description>
        <label>Is Corporate Contact - Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Corporate_Contact__c</fullName>
        <description>used to confirm if contact is a corporate ie B2B type, or an Individual i.e B2C</description>
        <formula>NOT( Account.RecordType.Name = &quot;Individual&quot;)</formula>
        <label>Is Corporate Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>custom last name field used in global action that service console leverages for new contact.</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_case_corrected__c</fullName>
        <formula>IF( 
NOT(ISBLANK( LastName )), 
UPPER(LEFT(LastName ,1)) &amp; LOWER(RIGHT(LastName, LEN(LastName)-1)), &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name case corrected</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Research_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the Market Research Team - some webforms as if people are interested in participating in Market Research.  If they select yes, this field should be populated (needs to be mapped from the webform to this field).</description>
        <inlineHelpText>Used by the Market Research Team - some webforms as if people are interested in participating in Market Research.</inlineHelpText>
        <label>Market Research Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Communications_Status__c</fullName>
        <description>this allows us to track whether a lead has actively opted in to comms, opted out, or we dont yet know if in or out. Destination Monash updates this field based on form actions</description>
        <label>Marketing Communications Status</label>
        <picklist>
            <picklistValues>
                <fullName>Opted in</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Opted out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MonTrack_Opt_Out_Reason__c</fullName>
        <description>Captures the reason for a student opting out of MonTRACK</description>
        <label>MonTrack Opt Out Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feeling Confident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Sibling/s at University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Studied Previously</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Taken Intermission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MonTrack_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a student has opted out of MonTRACK</description>
        <label>MonTrack Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MonTrack_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the student is a MonTRACK student</description>
        <label>MonTrack Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monash_Email_Address__c</fullName>
        <description>used to store Contact&apos;s monash assigned email address</description>
        <externalId>true</externalId>
        <label>Monash Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Monash_Scholars__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a student is a Monash Scholar</description>
        <label>Monash Scholars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <description>Captures a student&apos;s nationality</description>
        <label>Nationality</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADELIE LAND (FRANCE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL INDIAN OCEAN COUNTRIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL OTHER AFRICAN COUNTRIES NOT LISTED ABOVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL OTHER OVERSEAS COUNTRIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA, NFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINIAN ANTARCTIC TERRITORY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIAN ANTARCTIC TERRITORY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIAN EXTERNAL TERRITORIES, NEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Direct_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Direct Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onscreen_Marketing_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onscreen Marketing Opt in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginalPersonId__c</fullName>
        <description>used to assist with data migration</description>
        <externalId>true</externalId>
        <label>OriginalPersonId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Id__c</fullName>
        <description>used to map data from original CRM</description>
        <externalId>true</externalId>
        <label>Original Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Email__c</fullName>
        <description>Captures a student&apos;s parent&apos;s email</description>
        <label>Parent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <description>conditionally renders Person Id field only if is a Monash student or applicant Id</description>
        <formula>IF(
AND(LEN( Person_ID_unique__c )&gt;0, LEN(Person_ID_unique__c)&lt;9),Person_ID_unique__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_ID_unique__c</fullName>
        <description>text field that stores person Id, and used by external systems to match to</description>
        <externalId>true</externalId>
        <label>Person ID (text)</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Email__c</fullName>
        <description>Captures a student&apos;s previous email ID if it has changed</description>
        <label>Previous Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Residency_Status__c</fullName>
        <label>Residency Status</label>
        <picklist>
            <picklistValues>
                <fullName>Australian Permanent Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (International)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>School Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice School Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sport Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRC Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_Subjects_Studied__c</fullName>
        <description>Captures a list of subjects studied by the student at school</description>
        <label>School Subjects Studied</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algorithmics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Mathematics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mathematics Methods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philosophy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Politics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist Mathematics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theatre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Specific_area_s_of_interest__c</fullName>
        <description>Captures a student&apos;s specific areas of interest.</description>
        <label>Specific area(s) of interest</label>
        <type>TextArea</type>
    </fields>
</CustomObject>